integrate hackathon analitycs in site

--- a/asset/index.css
+++ b/asset/index.css
@@ -561,6 +561,7 @@ button {
   .top {
     padding: 5px 0 10px 0;
     margin: 0;
+    margin-right: 2em;
   }
   .first-outer-nav {
     display: block;
